--- a/01_agama/samyukta/01/SA1_46.md
+++ b/01_agama/samyukta/01/SA1_46.md
@@ -14,13 +14,13 @@ next: SA1_47.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Citra the cowherd’s village in Kuru.[\[2\]](#n2){:#ref2}
 {:#p1}
 
-2\. It was then that the Buddha addressed the monks, “It was because of knowing and seeing that I reached the end of contaminants, not because of not knowing or seeing. How was it because of knowing and seeing that I reached the end of contaminants and not because of not knowing or seeing? I mean: ‘This is form, this is the formation of form, and this is the cessation of form. This is feeling … conception … volition … consciousness, this is the formation of consciousness, and this is the cessation of consciousness.’ 
+2\. It was then that the Buddha addressed the monks, “It was because of knowing and seeing that I reached the end of the contaminants, not because of not knowing or seeing. How was it because of knowing and seeing that I reached the end of the contaminants and not because of not knowing or seeing? I mean: ‘This is form, this is the formation of form, and this is the cessation of form. This is feeling … conception … volition … consciousness, this is the formation of consciousness, and this is the cessation of consciousness.’
 {:#p2}
 
-3\. “[Suppose] one doesn’t cultivate this method or follow and achieve it, and they apply their mind to this goal: ‘Let my contaminants come to an end and my mind be liberated.’ You should know that that monk will never be able to reach the end of contaminants or liberation. Why is that? Because he doesn’t train himself. What doesn’t he train himself in? He doesn’t train in the abodes of mindfulness, right effort, spiritual abilities, faculties, powers, factors of awakening, or the path.
+3\. “[Suppose] one doesn’t cultivate this method or follow through with it, and they apply their mind to this goal: ‘Let my contaminants come to an end and my mind be liberated.’ You should know that that monk will never be able to reach the end of the contaminants or liberation. Why is that? Because he doesn’t train himself. What doesn’t he train himself in? He doesn’t train in the abodes of mindfulness, right effort, spiritual abilities, faculties, powers, factors of awakening, or the path.
 {:#p3}
 
-4\. “He’s like a brooding chicken that lays a clutch of eggs[\[3\]](#n3){:#ref3} but can’t keep them warm at the proper times. It takes breaks when it’s too cold or hot, but it wants its chicks to use their beaks and claws to hatch themselves by pecking at their eggshells. You should know that her chicks won’t have the strength themselves to be capable to breaking out of their shells with their beaks or claws. Why is that? Because that mother hen wasn’t able to keep them warm at the proper times when it was too cold or hot.”
+4\. “He’s like a brooding hen that lays a clutch of eggs[\[3\]](#n3){:#ref3} but can’t keep them warm at the proper times. She takes breaks when it’s too cold or hot, but she wants her chicks to use their beaks and claws to hatch themselves by pecking at their eggshells. You should know that her chicks won’t have the strength themselves to be capable to breaking out of their shells with their beaks or claws. Why is that? Because that mother hen wasn’t able to keep them warm at the proper times when it was too cold or hot.”
 {:#p4}
 
 5\. “Thus, it isn’t possible for a monk who wants to reach the end of the contaminants and liberation to do that if he isn’t diligent in his training or following through with it. Why is that? Because he doesn’t train himself. What doesn’t he train in? He doesn’t train in the abodes of mindfulness, right effort, spiritual abilities, faculties, powers, factors of awakening, or the path.
@@ -41,7 +41,7 @@ next: SA1_47.html
 10\. “Thus, a monk who diligently trains himself and follows through with it won’t himself know and see that the contaminants will end today or tomorrow. Still, that monk will know that he has ended the contaminants. Why is that? Because he trains himself. What does he train in? He trains in the abodes of mindfulness, right effort, spiritual abilities, faculties, powers, factors of awakening, and the path.
 {:#p10}
 
-11\. “He’s like a large ship that travels along the coast of the ocean for six months during summer. Its rope fastenings to slowly break as it’s blown around violently each day.
+11\. “He’s like a large ship that travels along the coast of the ocean for six months during summer. Its rope lashings slowly break as it’s blown around violently each day.
 {:#p11}
 
 12\. “Thus, the monk who diligently trains himself and follows through with it will slowly be freed from all the bonds, tendencies, afflictions, and hindrances. Why is that? Because he trains himself well. What does he train in? He trains in the abodes of mindfulness, right effort, spiritual abilities, faculties, powers factors of awakening, and the path.”
@@ -59,7 +59,7 @@ next: SA1_47.html
 
 1. {:#n1} The <em>sūtra</em> is remarkably similar to both <a href="https://suttacentral.net/sn22.101" target="_blank">SN 22.101</a> and <a href="https://suttacentral.net/an7.71" target="_blank">AN 7.71</a>. It contains the same lesson that liberation occurs naturally as a result of training and the same three illustrating similes of a brooding hen, a workman’s axe handle, and a seafaring ship. [\[back\]](#ref1)
 2. {:#n2} <em>Citra the cowherd’s village in Kuru</em>. C. 拘留國雜色牧牛聚落. S./P. Kuru is translit. as 拘留 (EMC. kɪu-lɪəu), and 國 indicates that it’s the name of a country. S. Citra (P. Citta) has been translated as 雜色 (lit. “variously colored”), who is identified as a cowherd (牧牛, lit. “pasturer of cattle”). Finally, 聚落 is the term for a village or hamlet. [\[back\]](#ref2)
-3. {:#n3} <em>a brooding chicken that lays a clutch of eggs</em>. C. 伏鷄生子眾多. 伏 has a contextual meaning when used with birds to mean brooding eggs (presumably because birds look like they are hiding their eggs when they sit on the nest). 生子 lit. means to give birth to offspring, but a chicken lays eggs rather than giving birth to live young. I’ve translated the expression assuming it means laying eggs. Otherwise, it might be intended to mean hatching her chicks from the eggs, which Buddhists considered to be a form of birth. [\[back\]](#ref3)
+3. {:#n3} <em>a brooding hen that lays a clutch of eggs</em>. C. 伏鷄生子眾多. 伏 has a contextual meaning when used with birds to mean brooding eggs (presumably because birds look like they are hiding their eggs when they sit on the nest). 生子 lit. means to give birth to offspring, but a chicken lays eggs rather than giving birth to live young. I’ve translated the expression assuming it means laying eggs. Otherwise, it might be intended to mean hatching her chicks from the eggs, which Buddhists considered to be a form of birth. [\[back\]](#ref3)
 4. {:#n4} <em>a mason</em>. C. 巧師. S./P. <em>palagaṇḍa</em>. The C. translation 巧師 appears to be a corruption, or at least an obscure reading. Lit. 巧師 means only “skilled artisan,” if we read 師 to mean a professional of some kind. However, a similar C. word 圬 does mean a mason. I’ve translated the passage assuming that 巧 = 圬 here, given that it agrees with the parallel passage in SN 22.101.<br/>
 Ordinarily, <em>palagaṇḍa</em> means a mason in both S. and P. The Theravāda commentary on the parallel passage claims that a carpenter is actually what is meant here, presumably to make sense of a mason using a woodworking tool. It’s possible that an ancient mason might have reason to cut wood in the course of his trade, so this re-interpretation may not be necessary; it’s just counterintuitive. [\[back\]](#ref4)
 
@@ -67,7 +67,7 @@ Ordinarily, <em>palagaṇḍa</em> means a mason in both S. and P. The Theravād
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 January 2024
+Last Revised: 1 February 2024
 {: .revised}
 
 ---
