--- a/01_agama/samyukta/01/SA1_25.md
+++ b/01_agama/samyukta/01/SA1_25.md
@@ -23,7 +23,7 @@ next: SA1_26.html
 The monk said to the Buddha, “Yes, Bhagavān.”
 
 
-4\. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, One should quickly get rid of something that’s a tying bond. Once one gets rid of that, they will be benefited by this doctrine, and they’ll find happiness for a long time.”
+4\. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, one should quickly get rid of something that’s a tying bond. Once one gets rid of that, they will be benefited by this doctrine, and they’ll find happiness for a long time.”
 {:#p4}
 
 That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”
@@ -51,7 +51,7 @@ That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve under
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 20 December 2023
+Last Revised: 2 February 2024
 {: .revised}
 
 ---
