--- a/01_agama/samyukta/01/SA1_47.md
+++ b/01_agama/samyukta/01/SA1_47.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 47 (264). A Clod of Dirt'
 type: kramdown
 base: ../../../
 previous: SA1_46.html
-next: SA1_53.html
+next: SA1_49.html
 ---
 
 # [The Related Discourses](../index.html)
@@ -35,31 +35,31 @@ The monk said to the Buddha, “I see it, Bhagavān.”
 7\. “I also become a noble wheel-turning king a hundred thousand times who ruled the four [continents] under heaven. I governed with the correct Dharma and possessed the seven treasures, which are the wheel treasure, elephant treasure, horse treasure, jewel treasure, beautiful woman treasure, treasurer treasure, and army general treasure. I also had a thousand sons who were courageous. Within the bounds of the four seas, my lands were level plains that lacked poisons or thorns, weren’t severe, weren’t confining, and were tamed by the Dharma.[\[4\]](#n4){:#ref4}
 {:#p7}
 
-8\. “It’s the way of annointed kings that they have 84,000 <em>nāga</em> elephants decorated with many jeweled ornaments. They’re covered with jeweled netting and carry jeweled banners. Their leader is an elephant king named Upavasatha.[\[5\]](#n5){:#ref5} They would gather in front of the palace twice a day, in the morning and afternoon. At the time, I thought, ‘This great herd of elephants comes here twice a day, trampling innumerable living things to death. I would rather have 42,000 elephants come once per century instead.’ Then, they did as I wished. 42,000 of those 84,000 elephants would come once a century.
+8\. “It’s the way of anointed kings that they have 84,000 <em>nāga</em> elephants decorated with many jeweled ornaments. They’re covered with jeweled netting and carry jeweled banners. Their leader is an elephant king named Upavasatha.[\[5\]](#n5){:#ref5} They would gather in front of the palace twice a day, in the morning and afternoon. At the time, I thought, ‘This great herd of elephants comes here twice a day, trampling innumerable living things to death. I would rather have 42,000 elephants come once per century instead.’ Then, they did as I wished. 42,000 of those 84,000 elephants would come once a century.
 {:#p8}
 
-9\. “Another rule of annointed kings is that they have 84,000 horse teams with chariots made of pure gold and covered with gold netting. Their leader is the horse king named Vālaha.[\[6\]](#n6){:#ref6}
+9\. “Another rule of anointed kings is that they have 84,000 horse teams with chariots made of pure gold and covered with gold netting. Their leader is the horse king named Vālaha.[\[6\]](#n6){:#ref6}
 {:#p9}
 
-10\. “Another rule of annointed kings is that they have 84,000 chariots made of four treasures: gold chariots, silver chariots, beryl chariots, and crystal chariots. They were covered with cushions of lion, tiger, and leopard skin as well as variegated wool fabric.[\[7\]](#n7){:#ref7} Their leader was the chariot called Vaijayantaghoṣa.[\[8\]](#n8){:#ref8}
+10\. “Another rule of anointed kings is that they have 84,000 chariots made of four treasures: gold chariots, silver chariots, beryl chariots, and crystal chariots. They were covered with cushions of lion, tiger, and leopard skin as well as variegated wool fabric.[\[7\]](#n7){:#ref7} Their leader was the chariot called Vaijayantaghoṣa.[\[8\]](#n8){:#ref8}
 {:#p10}
 
-11\. “Another rule of annointed kings is that they govern 84,000 cities, which are secure, bountiful, pleasant, and have flourishing populations. Their leader is the city Kuśavatī.[\[9\]](#n9){:#ref9}
+11\. “Another rule of anointed kings is that they govern 84,000 cities, which are secure, bountiful, pleasant, and have flourishing populations. Their leader is the city Kuśavatī.[\[9\]](#n9){:#ref9}
 {:#p11}
 
-12\. “Another rule of annointed kings is that they have 84,000 palaces made of the four treasures: gold and silver, beryl, and crystal, and emerald gems. Yoha is their leader.[\[10\]](#n10){:#ref10}
+12\. “Another rule of anointed kings is that they have 84,000 palaces made of the four treasures: gold and silver, beryl, and crystal, and emerald gems. Yoha is their leader.[\[10\]](#n10){:#ref10}
 {:#p12}
 
-13\. “Monk, another rule of annointed kings is that they have 84,000 beds made of four treasures: gold, silver, beryl, and crystal. They have a variety of silk coverlets, wool blankets and serges, or antelope[\[11\]](#n11){:#ref11} bedding with pillows placed on top.”
+13\. “Monk, another rule of anointed kings is that they have 84,000 beds made of four treasures: gold, silver, beryl, and crystal. They have a variety of silk coverlets, wool blankets and serges, or antelope[\[11\]](#n11){:#ref11} bedding with pillows placed on top.”
 {:#p13}
 
-14\. “Furthermore, monk, another rule of annointed kings is that they have 84,000 articles of four kinds of clothing: silk cloth, linen cloth, <em>dukūla</em> cloth, and <em>kukova</em> (?) cloth.[\[12\]](#n12){:#ref12}
+14\. “Furthermore, monk, another rule of anointed kings is that they have 84,000 articles of four kinds of clothing: silk cloth, linen cloth, <em>dukūla</em> cloth, and <em>kukova</em> (?) cloth.[\[12\]](#n12){:#ref12}
 {:#p14}
 
-15\. “Furthermore, monk, another rule of annointed kings is that they have 84,000 beautiful women who are warrior women or resemble warrior women, to say nothing of other women.
+15\. “Furthermore, monk, another rule of anointed kings is that they have 84,000 beautiful women who are warrior women or resemble warrior women, to say nothing of other women.
 {:#p15}
 
-16\. “Furthermore, monk, another rule of annointed kings is that they have 84,000 meals replete with many flavors. Monk, among the 84,000 beautiful women, there’s only one of them who attends to the king. Of his 84,000 treasure clothes, there’s only one that he wears. Of the 84,000 treasure beds, there’s only one that he lies on. Of the 84,000 palaces, there’s only one hall where he presides. Of the 84,000 cities, there’s only one where he lives, which is called Kuśavatī. Of the 84,000 treasure chariots, there’s only one that he rides when he leaves the city to go touring, which is called Vaijayantaghoṣa. Of the 84,000 treasure horses, there’s only one horse that he rides, which is named Vālaha and has a crimson-colored mane and tail. Of the 84,000 <em>nāga</em> elephants, there’s only one elephant that he rides when he leaves the city to go touring, which is named Upavasatha.
+16\. “Furthermore, monk, another rule of anointed kings is that they have 84,000 meals replete with many flavors. Monk, among the 84,000 beautiful women, there’s only one of them who attends to the king. Of his 84,000 treasure clothes, there’s only one that he wears. Of the 84,000 treasure beds, there’s only one that he lies on. Of the 84,000 palaces, there’s only one hall where he presides. Of the 84,000 cities, there’s only one where he lives, which is called Kuśavatī. Of the 84,000 treasure chariots, there’s only one that he rides when he leaves the city to go touring, which is called Vaijayantaghoṣa. Of the 84,000 treasure horses, there’s only one horse that he rides, which is named Vālaha and has a crimson-colored mane and tail. Of the 84,000 <em>nāga</em> elephants, there’s only one elephant that he rides when he leaves the city to go touring, which is named Upavasatha.
 {:#p16}
 
 17\. “Monk, these rewards are for what deeds that attain such awesome virtues and sovereignty? These are rewards for three kinds of deeds. What are the three? The first is generosity. The second is discipline. The third is cultivating the path. Monk, you should know, ordinary people are affected by the habits of the five desires and never tire of them. Noble people fulfill wisdom and are always satisfied. Monk, all those doings have completely ceased and changed in the past. The things they naturally provide and their fame all erode away. Therefore, monk, stop these doings forever, become disillusioned, end desire for them, and be liberated from them. 
@@ -124,7 +124,7 @@ The main difference between the SN 22.96 and these parallels is that it lacks th
 As a result of this, I’ve amended 正 to 等 but otherwise maintained the C. reading with the understanding that 住 is the main verb of the clause. [\[back\]](#ref2)
 3. {:#n3} <em>small clod of dirt.</em> C. 小土摶, P. <em>paritta gomayapiṇḍa</em>. The expressions are the same in the two parallels other than one has “earth” and the other “cowdung.” 摶 often translated the equiv. of P. <em>piṇḍa</em>, which occurs more commonly to describe a bite of food. In MĀ 61, the expression is made even more dramatic: “scooped a little cowdung with his fingernail” (指爪抄少牛糞). [\[back\]](#ref3)
 4. {:#n4} This description different kinds of rebirth are not found in SN 22.96. MĀ 61 omits this section describing noble wheel-turning king rebirths, but it does include the rebirths in heaven. Instead of a section on wheel-turning king births, MA 61 has the Buddha being reborn “measureless times” as “warrior head-born kings” (S. <em>kṣatriya mūrdhajāta</em>). This was apparently a variation of the expression we find in P. and here in SĀ that lit. means “head-consecrated” king (<em>muddhāvasitta</em>, C. 灌頂王, S. <em>mūrdhābhiṣikta</em>), which seemed to refer to an ascension ritual that involved sprinkling water on the new king’s head.<br/>
-Here in SĀ, this passage about being reborn as noble wheel-turning kings is curious. Was the wheel-turning king considered the same as the annointed king that’s described below, or were they different types of kings? The confusion between the three parallels suggests that the wheel-turning king wasn’t mentioned here at all in a common ancestor text that seems likely to be their inspiration. [\[back\]](#ref4)
+Here in SĀ, this passage about being reborn as noble wheel-turning kings is curious. Was the wheel-turning king considered the same as the anointed king that’s described below, or were they different types of kings? The confusion between the three parallels suggests that the wheel-turning king wasn’t mentioned here at all in a common ancestor text that seems likely to be their inspiration. [\[back\]](#ref4)
 5. {:#n5} <em>Upavasatha.</em> C. 布薩 (EMC. po-sat), G. <em>posatha</em>, P. <em>uposatha</em>, S. <em>upavasatha</em>. The C. appears to translit. the G. equiv. of P. <em>uposatha</em> (dropping the final syllable as usu.). This was the name for Buddhist days of fasting and observing precepts. The elephant king is named the same in the P. parallel. The name found in MĀ 61 is unclear. [\[back\]](#ref5)
 6. {:#n6} <em>Vālaha.</em> C. 婆羅 (EMC. bua-la), G. <em>vala</em>, P. <em>valāhaka</em>, S. ?. The C. likely translit. G. <em>vala</em>, but it’s not clear what the intended meaning would be. The P. parallel has adopted the reading <em>valāhaka</em>, which means a storm cloud. An alt. C. parallel in MĀ 61 translates the name as 䭷 (“horse with a long mane”). However, a passage below makes it clearer that the reading is actually <em>vālaha</em> (C. 婆羅訶) like the P. parallel. [\[back\]](#ref6)
 7. {:#n7} <em>wool fabric.</em> C.欽婆羅 (EMC. k‘ɪəm-bua-la), G. ?, P. <em>kambala</em>, S. <em>kambala</em>. The C. appears to translit. a word equiv. to P./S. <em>kambala</em>, meaning fabric made of wool. [\[back\]](#ref7)
