--- a/01_agama/samyukta/01/SA1_48.md
+++ b/01_agama/samyukta/01/SA1_48.md
@@ -89,9 +89,9 @@ Then you’ll find your eternal cooling place.”
 
 1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.95" target="_blank">SN 22.95</a>. There are also two alternate C. translations (T105 and T106). All four versions are remarkably similar to each other. One of the differences that stands out is that this version in SĀ doesn’t begin by saying that the Buddha saw foam on the river. However, the other two Chinese translations do include this detail like SN 22.95. [\[back\]](#ref1)
 2. {:#n2} <em>Ayodhyā.</em> C. 阿毘陀 (EMC. •a-bii-da = Pr. <em>avidha-?</em>), P. Ayojjhā, G. Ayoj̄a, S. Ayodhyā. The C. translit. here appears equiv. to S. <em>avidheya</em>, which is a synonym of S. <em>ayodhyā</em> (P. <em>ayojjhā</em>) and lit. means “not subdued.” I’ve adopted the S. equiv. for clarity since it must be an alternate name for the same place, which was a city on the Gaṅgā River and also a kingdom centered there. [\[back\]](#ref2)
-3. {:#n3} <em>wild horses drifting</em>. C. 野馬流動, P. <em>marīcikā phandati</em>. It’s unclear whether this expression is based on the original Indic passage or a native idiom describing the visual illusion of a mirage in the distance. The latter seems more likely to me. Clouds of dust were sometimes called “wild horses” in Chinese literature in reference to the great clouds of dust that herds of horses kicked up when running across arid plains. This seems to be an attempt to approx. the meaning of a word like G. <em>mariya<em> (P. <em>marīci</em>).<br/>
+3. {:#n3} <em>wild horses drifting</em>. C. 野馬流動, P. <em>marīcikā phandati</em>. It’s unclear whether this expression is based on the original Indic passage or a native idiom describing the visual illusion of a mirage in the distance. The latter seems more likely to me. Clouds of dust were sometimes called “wild horses” in Chinese literature in reference to the great clouds of dust that herds of horses kicked up when running across arid plains. This seems to be an attempt to approx. the meaning of a word like G. <em>mariya</em> (P. <em>marīci</em>).<br/>
 We should note, however, that the same term is translated as C. 燄 (“blazing, flame, mirage”) in the concluding verse below, which is much closer in meaning to <em>marīci</em>. This shows that the translator could have used 燄 as a translation here in the prose passage but chose not to do so. Given that wild horse herds would have been a common sight in Central Asia, which is the likely origin of this version of the <em>sūtra</em>, we shouldn’t dismiss out of hand the possibility that it was a lit. translation of the original text. I therefore have retained the lit. reading of the C. here. [\[back\]](#ref3)
-4. {:#n4} <em>sun clan.</em> C. 日種姓, P. <em>ādicca bandhu</em>. The C. here would likely trans. S. <em>ādityagotra</em>, but otherwise this line is identical to the concluding line of similar verses found in several P. <em>sutta<em>s including SN 22.95, which reads: <em>desitādiccabandhunā</em> (e.g., AN 4.14 or 8.29). Apparently, S. <em>āditya</em> (P. <em>ādicca</em>) was considered the clan name of the Buddha’s family. [\[back\]](#ref4)
+4. {:#n4} <em>sun clan.</em> C. 日種姓, P. <em>ādicca bandhu</em>. The C. here would likely trans. S. <em>ādityagotra</em>, but otherwise this line is identical to the concluding line of similar verses found in several P. <em>sutta</em>s including SN 22.95, which reads: <em>desitādiccabandhunā</em> (e.g., AN 4.14 or 8.29). Apparently, S. <em>āditya</em> (P. <em>ādicca</em>) was considered the clan name of the Buddha’s family. [\[back\]](#ref4)
 
 ---
 
