--- a/01_agama/samyukta/01/SA1_1-4.md
+++ b/01_agama/samyukta/01/SA1_1-4.md
@@ -32,7 +32,7 @@ next: SA1_5.html
 
 ### Notes
 
-1. {:#n1} These four <em>sūtra</em>s (SĀ 1.1-4) are  <em>sūtra</em> no. 1 in the <cite>Taisho</em> edition (T99.2.1a6). Close Pali parallels include <a href="https://suttacentral.net/sn22.12" target="_blank">SN 22.12</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a>.<br/>
+1. {:#n1} These four <em>sūtra</em>s (SĀ 1.1-4) are  <em>sūtra</em> no. 1 in the <cite>Taisho</cite> edition (T99.2.1a6). Close Pali parallels include <a href="https://suttacentral.net/sn22.12" target="_blank">SN 22.12</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a>.<br/>
 These <em>sūtra</em>s follow the same template with the keywords “impermanent,” “painful,” “empty,” and “not self.” Compare these <em>sūtra</em>s with <a href="../02/SA2_1.html" target="_blank">SĀ 2.1-4 (188)</a>, which apply the same template to the six sense fields (i.e., vision, hearing, smelling, taste, tactile feelings, and mental perceptions). This parallelism continues between SĀ 1.1-10 and SĀ 2.1-10.<br/>
 The Chinese translators there employs clearer grammatical structures and vocabulary choices than they do here. E.g., 觀察 is clearer than 觀 for the meaning “to observe.” 正見 appear more correct than 正觀 when we compare these <em>sūtra</em>s with their Pali counterparts. And dependent clauses are used instead of topicalized subjects. Looking past these minor differences, the source texts appear to have been identical templates.<br/>
 These stylistic differences indicate that either different translators worked on the project at different times, or perhaps there was a hiatus during which the same translator’s style changed. [\[back\]](#ref1)
