Cleanup of website and added new resources, other fixes.

--- a/01_agama/ekottarika/24/EA_24_06.md
+++ b/01_agama/ekottarika/24/EA_24_06.md
@@ -110,7 +110,7 @@ The monks then said to the Bhagavān, “The Tathāgata is the Dharma king and t
 30\. “Like arhats who don’t drink alcohol, have unconfused minds, and keep the Buddha’s rules and precepts without any transgressions, I will now be likewise. From today until the next sunrise, I won’t again drink alcohol and keep the Buddha’s precepts without any violations.
 {:#p30}
 
-31\. [625c] “The arhats don’t break the fasting observance of always eating at the proper time, are satisfied with a small meal, and aren’t attached to its taste during their whole life. Now, I will likewise not break the fasting observance of always eating at the proper time, being satisfied with a small meal, and not being attached to its taste from today until tomorrow morning.
+31\. “The arhats don’t break the fasting observance of always eating at the proper time, are satisfied with a small meal, and aren’t attached to its taste during their whole life. Now, I will likewise not break the fasting observance of always eating at the proper time, being satisfied with a small meal, and not being attached to its taste from today until tomorrow morning.
 {:#p31}
 
 32\. “Arhats never sit on high and wide seats, which means high and wide seats, seats made of gold, silver, ivory, or horn, buddha seats, pratyeka-buddha seats, arhat seats, or seats for venerable teachers. During this time, arhats don’t sit on these eight types of seats, and I won’t violate it by sitting on them, either.
@@ -163,7 +163,10 @@ Nirvāṇa has none of these dangers:\\
 41\. The monks who heard what the Buddha taught then rejoiced and approved.
 {:#p41}
 
+---
+
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA 19.15](../../samyukta/19/SA19_15.html){:target="_blank"}, and [SA2 46](../../samyukta2/SA2_46.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
