--- a/01_agama/ekottarika/43/EA_43_05.md
+++ b/01_agama/ekottarika/43/EA_43_05.md
@@ -14,7 +14,7 @@ next: EA_43_07.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Now, I will explain [760a] the parable of the raft. All of you, well consider and keep it in mind.”
+2\. It was then that the Bhagavān addressed the monks, “Now, I will explain the parable of the raft. All of you, well consider and keep it in mind.”
 {: #p2}
 
 3\. The monks replied, “Yes, Bhagavān!” The monks then accepted the instruction from the Buddha.
@@ -43,7 +43,7 @@ The monks replied, “No, Bhagavān. That person has reaped the reward that they
 10\. There was then a monk who asked the Bhagavān, “How is it that we should dispense with the teaching as we would with what’s not the teaching? Wouldn’t we then not be training for awakening as its derived from the teaching?”
 {: #p10}
 
-11\. The Bhagavān told him, “It’s based on conceit that conceit, arrogance, overconfidence, self-conceit, wrong conceit, conceitedness towards superiors, and boastful conceit are ceased. When there’s no conceit, arrogance ceases, the lack of conceit and [760b] right conceit cease, and wrong conceit and boastful conceit cease. All four conceits are ceased.
+11\. The Bhagavān told him, “It’s based on conceit that conceit, arrogance, overconfidence, self-conceit, wrong conceit, conceitedness towards superiors, and boastful conceit are ceased. When there’s no conceit, arrogance ceases, the lack of conceit and right conceit cease, and wrong conceit and boastful conceit cease. All four conceits are ceased.
 {: #p11}
 
 12\. “In the past when I had yet to achieve the Buddha’s awakening, I was sitting under the king of trees, and this thought occurred to me: ‘Who is the highest rank in the desire realm that I should subdue?” Of all of the gods and people in the desire realm, none them would yield.
@@ -73,7 +73,7 @@ I’ll throw him into the ocean by his legs!”
 17\. “At that point, monks, I put on the armor of kindness, picked up the bow of concentration and arrows of wisdom, and waited for his great army. Corrupt Māra was the great leader of an army of eighteen million. Their faces were all different from each other as those of monkeys, apes, and lions approached me.
 {: #p17}
 
-18\. “Some in that army of rākṣasas had one type of body and another type of head. Some had ten bodies that shared a single head. Some had two shoulders and three necks. Some had a mouth in their chests. Some had a single hand, some had [760c] two hands, and others had four hands. Some had both hands raised over their heads and dead snakes in their mouths. Some had fire burning on their heads, and others shot fire from their mouths. Some used both hands to stretch their mouths wanting to devour what was in front of them. Some had exposed bellies and were armed with swords and spears. Some carried mallets, some carried boulders, and some hauled stones. Some carried large trees. Some had a pair of legs on top, and others had heads on their bottoms. Some rode elephants, lions, tigers, wolves, and poisonous serpents. Some came on foot, and some flew in the air. Corrupt Māra led that army and advanced to surround the bodhi tree.
+18\. “Some in that army of rākṣasas had one type of body and another type of head. Some had ten bodies that shared a single head. Some had two shoulders and three necks. Some had a mouth in their chests. Some had a single hand, some had two hands, and others had four hands. Some had both hands raised over their heads and dead snakes in their mouths. Some had fire burning on their heads, and others shot fire from their mouths. Some used both hands to stretch their mouths wanting to devour what was in front of them. Some had exposed bellies and were armed with swords and spears. Some carried mallets, some carried boulders, and some hauled stones. Some carried large trees. Some had a pair of legs on top, and others had heads on their bottoms. Some rode elephants, lions, tigers, wolves, and poisonous serpents. Some came on foot, and some flew in the air. Corrupt Māra led that army and advanced to surround the bodhi tree.
 {: #p18}
 
 19\. “Māra Pāpīyān stood to my left and said to me, ‘Get up this instant, ascetic!’ I stayed silent and didn’t reply while he said this three times.
@@ -110,7 +110,7 @@ And now they will destroy your army.’
 
 “I then replied to Pāpīyān, ‘I’ve observed those up in heaven and among humans. Whether demons, gods, humans, or non-humans, that fourfold army of yours won’t be able to disturb even a hair on my body.’
 
-26\. “Māra replied, ‘Ascetic, do you want to do battle [761a] with us today?’
+26\. “Māra replied, ‘Ascetic, do you want to do battle with us today?’
 {: #p26}
 
 “I replied, ‘I intend to do battle.’
@@ -150,7 +150,7 @@ And now they will destroy your army.’
 “When the earth spirit had finished saying this, Māra Pāpīyān felt grief, sorrow, pain, and troubled. He retreated and disappeared.
 {: #p33}
 
-34\. “Monks, it’s by this method that you should know that even the teaching ceases, [761b] so why wouldn’t what’s not the teaching? For a long time, I have taught you this one parable sutra of awakening. If you don’t investigate its words, how will you understand its meaning? The reason for that is this teaching is obscure. Disciples and pratyeka-buddhas who cultivate this teaching win great virtue and obtain the immortal and untroubled state.
+34\. “Monks, it’s by this method that you should know that even the teaching ceases, so why wouldn’t what’s not the teaching? For a long time, I have taught you this one parable sutra of awakening. If you don’t investigate its words, how will you understand its meaning? The reason for that is this teaching is obscure. Disciples and pratyeka-buddhas who cultivate this teaching win great virtue and obtain the immortal and untroubled state.
 {: #p34}
 
 35\. “How is that called the parable of riding a raft? It refers to relying on conceit to cease conceit. Once conceit is fully ceased, there are no more afflicted thoughts and confused ideas. It’s like a jackal skin that’s hard to work with.  When it’s hit with a fist, there’s no sound, and the leather lacks toughness. This is likewise. When a monk’s conceit is gone, there’s nothing to uplift or lower [his mind].
@@ -165,7 +165,10 @@ And now they will destroy your army.’
 38\. The monks who heard what the Buddha taught then rejoiced and approved.
 {: #p38}
 
+---
+
 ### Notes
+
 1. {:#n1} Parallels include [MN 22](https://suttacentral.net/mn22){: target="_blank"}, [MĀ 204](../../madhyama/MA_204.html){: target="_blank"}, [SN 35.238](https://suttacentral.net/sn35.238){: target="_blank"}, and [Snp 3.2](https://suttacentral.net/snp3.2){: target="_blank"}. [\[back\]](#ref1)
 
 ---
