--- a/01_agama/ekottarika/50/EA_50_08.md
+++ b/01_agama/ekottarika/50/EA_50_08.md
@@ -40,7 +40,7 @@ The Bhagavān told a monk, “You, go to that monk Phalguna and tell him, ‘The
 
 That monk replied, “Yes, Bhagavān.”
 
-8\. The Buddha told the monk, “You are a monk. How can you be having affairs with nuns? Are you not a clansman who shaved off his hair and beard, put on the three-garment robe, and left home [813a] to train on the path with firm faith?”
+8\. The Buddha told the monk, “You are a monk. How can you be having affairs with nuns? Are you not a clansman who shaved off his hair and beard, put on the three-garment robe, and left home to train on the path with firm faith?”
 {:#p8}
 
 The monk Phalguna said to the Buddha, “Indeed, Bhagavān. I am a clansman who left home to train on the path with firm faith.”
@@ -90,7 +90,10 @@ The monks replied, “Indeed, Bhagavān. We have not heard the Tathāgata teach 
 21\. The monks who heard what the Buddha taught then rejoiced and approved.
 {:#p21}
 
+---
+
 ### Notes
+
 1. {:#n1} Parallels include [MN 21](https://suttacentral.net/mn21){: target="_blank"}, [MN 22](https://suttacentral.net/mn22){: target="_blank"}, MĀ 193, and [MĀ 200](../../madhyama/MA_200.html){: target="_blank"}. [\[back\]](#ref1)
 
 ---
